5.0/_sources/lland_v3.rst.txt
.. |ACKER| replace:: :const:`~hydpy.models.lland.lland_constants.ACKER`
.. |BAUMB| replace:: :const:`~hydpy.models.lland.lland_constants.BAUMB`
.. |BODEN| replace:: :const:`~hydpy.models.lland.lland_constants.BODEN`
.. |BoWa| replace:: :class:`~hydpy.models.lland.lland_states.BoWa`
.. |Calc_LanduseSurfaceResistance_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_LanduseSurfaceResistance_V1`
.. |DailyNetRadiation| replace:: :class:`~hydpy.models.lland.lland_fluxes.DailyNetRadiation`
.. |EBdn| replace:: :class:`~hydpy.models.lland.lland_states.EBdn`
.. |ESnow| replace:: :class:`~hydpy.models.lland.lland_states.ESnow`
.. |EvB| replace:: :class:`~hydpy.models.lland.lland_fluxes.EvB`
.. |EvI| replace:: :class:`~hydpy.models.lland.lland_fluxes.EvI`
.. |EvPo| replace:: :class:`~hydpy.models.lland.lland_fluxes.EvPo`
.. |EvS| replace:: :class:`~hydpy.models.lland.lland_fluxes.EvS`
.. |FEUCHT| replace:: :const:`~hydpy.models.lland.lland_constants.FEUCHT`
.. |FLUSS| replace:: :const:`~hydpy.models.lland.lland_constants.FLUSS`
.. |False| replace:: :const:`False`
.. |FixedParameter.restore| replace:: :func:`~hydpy.core.parametertools.FixedParameter.restore`
.. |GLETS| replace:: :const:`~hydpy.models.lland.lland_constants.GLETS`
.. |GRUE_E| replace:: :const:`~hydpy.models.lland.lland_constants.GRUE_E`
.. |GRUE_I| replace:: :const:`~hydpy.models.lland.lland_constants.GRUE_I`
.. |Inzp| replace:: :class:`~hydpy.models.lland.lland_states.Inzp`
.. |KTSchnee| replace:: :class:`~hydpy.models.lland.lland_control.KTSchnee`
.. |LAUBW| replace:: :const:`~hydpy.models.lland.lland_constants.LAUBW`
.. |MISCHW| replace:: :const:`~hydpy.models.lland.lland_constants.MISCHW`
.. |Model.check_waterbalance| replace:: :func:`~hydpy.models.lland_v3.Model.check_waterbalance`
.. |NADELW| replace:: :const:`~hydpy.models.lland.lland_constants.NADELW`
.. |NBes| replace:: :class:`~hydpy.models.lland.lland_fluxes.NBes`
.. |NegQ| replace:: :class:`~hydpy.models.lland.lland_control.NegQ`
.. |NetLongwaveRadiationSnow| replace:: :class:`~hydpy.models.lland.lland_fluxes.NetLongwaveRadiationSnow`
.. |NetShortwaveRadiationSnow| replace:: :class:`~hydpy.models.lland.lland_fluxes.NetShortwaveRadiationSnow`
.. |OBSTB| replace:: :const:`~hydpy.models.lland.lland_constants.OBSTB`
.. |RefreezeFlag| replace:: :class:`~hydpy.models.lland.lland_control.RefreezeFlag`
.. |Return_PenmanMonteith_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_PenmanMonteith_V1`
.. |Return_Penman_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_Penman_V1`
.. |Return_TempSSurface_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_TempSSurface_V1`
.. |SEE| replace:: :const:`~hydpy.models.lland.lland_constants.SEE`
.. |SIED_D| replace:: :const:`~hydpy.models.lland.lland_constants.SIED_D`
.. |SIED_L| replace:: :const:`~hydpy.models.lland.lland_constants.SIED_L`
.. |Sequences.conditions| replace:: :const:`~hydpy.core.sequencetools.Sequences.conditions`
.. |True| replace:: :const:`True`
.. |VERS| replace:: :const:`~hydpy.models.lland.lland_constants.VERS`
.. |VolBMax| replace:: :class:`~hydpy.models.lland.lland_control.VolBMax`
.. |WASSER| replace:: :const:`~hydpy.models.lland.lland_constants.WASSER`
.. |WATS| replace:: :class:`~hydpy.models.lland.lland_states.WATS`
.. |WAeS| replace:: :class:`~hydpy.models.lland.lland_states.WAeS`
.. |WEINB| replace:: :const:`~hydpy.models.lland.lland_constants.WEINB`
.. |WG2Z| replace:: :class:`~hydpy.models.lland.lland_control.WG2Z`
.. |WG| replace:: :class:`~hydpy.models.lland.lland_fluxes.WG`
.. |WLatSnow| replace:: :class:`~hydpy.models.lland.lland_fluxes.WLatSnow`
.. |WMax| replace:: :class:`~hydpy.models.lland.lland_control.WMax`
.. |WSensSnow| replace:: :class:`~hydpy.models.lland.lland_fluxes.WSensSnow`
.. |WSurf| replace:: :class:`~hydpy.models.lland.lland_fluxes.WSurf`
.. |lland_v1| replace:: :mod:`~hydpy.models.lland_v1`
.. |lland_v3| replace:: :mod:`~hydpy.models.lland_v3`
.. |meteo_v003| replace:: :mod:`~hydpy.models.meteo_v003`
.. |meteo| replace:: :mod:`~hydpy.models.meteo`
.. |numpy.inf| replace:: :const:`~numpy.inf`

.. _lland_v3:

lland_v3
========

.. automodule:: hydpy.models.lland_v3
    :members:
    :show-inheritance:
    :exclude-members: Self, Reversible, Generic, Sized, Awaitable, IntVar, clear_overloads, TypeAlias, Sequence, Hashable, SenderSequences, SUBMETHODS, SupportsAbs, AnyStr, assert_never, reveal_type, CLASSES, REQUIREDSEQUENCES, ItemsView, Union, SupportsFloat, get_overloads, get_origin, OUTLET_METHODS, NoReturn, no_type_check, Type, Final, PART_ODE_METHODS, RECEIVER_METHODS, Tuple, AbstractSet, ByteString, MappingView, subpars, MutableSequence, MutableSet, SupportsRound, CONTROLPARAMETERS, INLET_METHODS, get_protocol_members, SOLVERSEQUENCES, FrozenSet, no_type_check_decorator, fastaccess_old, Mapping, FIXEDPARAMETERS, seqs, KeysView, SUBMODELS, Protocol, SupportsComplex, SENDER_METHODS, ContextManager, deprecated, SupportsBytes, get_original_bases, Iterator, is_protocol, TypeGuard, DefaultDict, LiteralString, Required, TextIO, TYPE_CHECKING, AsyncContextManager, fastaccess_new, FULL_ODE_METHODS, SOLVERPARAMETERS, BinaryIO, fastaccess, runtime, IO, Text, TypeVarTuple, ValuesView, AsyncIterable, Generator, Optional, assert_type, Literal, dataclass_transform, subvars, pars, get_args, ParamSpec, Annotated, cast, final, subseqs, ClassVar, Any, Unpack, Coroutine, is_typeddict, Counter, UPDATEDSEQUENCES, Callable, Dict, NamedTuple, overload, OrderedDict, Set, ADD_METHODS, Collection, Pattern, List, get_type_hints, Concatenate, ParamSpecKwargs, DERIVEDPARAMETERS, AsyncGenerator, override, Container, RUN_METHODS, NotRequired, NewType, RESULTSEQUENCES, SupportsInt, Buffer, Iterable, TypeVar, SupportsIndex, MutableMapping, ChainMap, FactorSequences, ForwardRef, TypeAliasType, AsyncIterator, Never, ParamSpecArgs, Match, Deque, TypedDict, ReceiverSequences, runtime_checkable
